<?xml version="1.0"?>
<package format="2">
  <name>ari_navigation</name>
  <version>0.0.36</version>
  <description>The ARI Navigatgion metapackage</description>

  <maintainer email="procopio.stein@pal-robotics.com">Procópio Stein</maintainer>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>Apache License 2.0</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ari_2dnav</exec_depend>
  <exec_depend>ari_maps</exec_depend>
  <exec_depend>ari_rgbd_sensors</exec_depend>
  <exec_depend>ari_laser_sensors</exec_depend>


  <export>
    <metapackage/>
  </export>
</package>
